# mwc-wallet

./: Cargo.toml  README.md  azure-pipelines.yml  build_static.sh  build_static32.bat  build_static64.bat  build_static_linux.sh  mypatch.patch
.cargo/: config
.ci/: release.yml  test.yml  windows-release.yml
api/: Cargo.toml
api/src/: foreign.rs  foreign_rpc.rs  owner.rs  owner_rpc_v2.rs  owner_rpc_v3.rs  types.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
controller/: Cargo.toml
controller/src/: command.rs  controller.rs  display.rs  lib.rs
controller/tests/: integrity_kernel.rs  self_spend.rs
controller/tests/common/: mod.rs
doc/: atomic_swaps.md  floonet_faucet.md  setup.md  slatepack_data_format.md  tor_for_exchanges_pools.md
impls/: Cargo.toml
impls/src/: lib.rs
impls/src/adapters/: file.rs  http.rs  libp2p_messaging.rs  mod.rs  mwcmq.rs
impls/src/backends/: lmdb.rs
impls/src/client_utils/: client.rs
impls/src/lifecycle/: default.rs
impls/src/node_clients/: http.rs
impls/src/test_framework/: mod.rs  testclient.rs
impls/src/tor/: config.rs  mod.rs  process.rs  status.rs
libwallet/: Cargo.toml
libwallet/.cargo/: config
libwallet/src/: api_impl.rs  error.rs  lib.rs  slate.rs  types.rs
libwallet/src/api_impl/: foreign.rs  owner.rs  owner_eth.rs  owner_libp2p.rs  owner_swap.rs  owner_updater.rs  types.rs
libwallet/src/internal/: keys.rs  scan.rs  selection.rs  tx.rs
libwallet/src/proof/: base58.rs  crypto.rs  hasher.rs  proofaddress.rs  tx_proof.rs
libwallet/src/slate_versions/: mod.rs  v3.rs
libwallet/src/slatepack/: armor.rs  mod.rs  packer.rs  slatepack.rs
libwallet/src/swap/: api.rs  buyer.rs  error.rs  message.rs  mod.rs  seller.rs  ser.rs  swap.rs  trades.rs  types.rs
libwallet/src/swap/bitcoin/: api.rs  client.rs  electrum.rs  types.rs
libwallet/src/swap/ethereum/: api.rs  client.rs  decimal_convert.rs  erc20_contract.rs  erc20_swap_contract.rs  ethereum.rs  infura.rs  mod.rs  swap_contract.rs  types.rs
libwallet/src/swap/fsm/: buyer_swap.rs  seller_swap.rs  state.rs
libwallet/src/swap/multisig/: error.rs  types.rs
libwallet/swap_test/: swap_buy_1.json  swap_buy_2.json  swap_buy_3.json  swap_sell_1.json  swap_sell_2.json  swap_sell_3.json  swap_sell_4.json  swap_sell_5.json  swap_sell_6.json
libwallet/tests/: libwallet.rs
src/cli/: cli.rs
src/cmd/: wallet_args.rs
tests/: cmd_line_basic.rs  owner_v2_sanity.rs  owner_v3_init_secure.rs
tests/common/: mod.rs
util/: Cargo.toml
util/src/: lib.rs
