[package]
name = "grin_wallet_libwallet"
version = "4.3.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
failure = "0.1"
failure_derive = "0.1"
rand = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.4", features = ["serde"] }
lazy_static = "1"
strum = "0.15"
strum_macros = "0.15"
ed25519-dalek = "1.0.0-pre.4"
x25519-dalek = "0.6"
byteorder = "1"
data-encoding = "2"
ring = "0.16"
regex = "1.3"
sha2 = "0.7"
sha3 = "0.8"
digest = "0.7"
hmac = "0.6"
ripemd160 = "0.7"
signature = "1.1.0"
hex = "0.3"
base64 = "0.9"
colored ="1.6"
bitcoin = { version = "0.26", git = "https://github.com/mwcproject/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }
#bitcoin = { version = "0.26", path = "../../rust-bitcoin", features = ["bitcoinconsensus"] }
bitcoin_hashes = { version = "0.9.1", features = ["serde"] }
serial_test = "0.4.0"
bch = { git = "https://github.com/mwcproject/rust-bch", branch = "master" }
#bch = { path = "../../rust-bch" }
native-tls = "0.2"
zcash_primitives = { version = "0.4.0", git = "https://github.com/mwcproject/librustzcash", branch = "master", features = ["transparent-inputs"] }
#zcash_primitives = { path = "../../librustzcash/zcash_primitives", features = ["transparent-inputs"] }
smaz = "0.1"
bitstream-io = "0.9"
bs58 = "0.3"
curve25519-dalek = "2.1"
crypto_box = "0.5"
crc = "1.8"
libp2p = { git = "https://github.com/mwcproject/rust-libp2p", branch = "master", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"] }
#libp2p = { path = "../../rust-libp2p", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"] }
#ethereum
tokio = { version = "0.2.1", features = ["full"] }
futures-timer = "3.0.2"
crossbeam-utils = "0.7"
#web3 = { version = "0.15.0", default-features = false, features = ["ws-tls-async-std", "signing"] }
web3 = { git = "https://github.com/mwcproject/rust-web3", branch = "master",  default-features = false, features = ["ws-tls-async-std", "signing"] }
secp256k1 = { version = "0.20.1", features = ["rand"]}
ether-converter = "0.1.3"
wagyu-ethereum = { git = "https://github.com/mwcproject/wagyu-ethereum", branch = "master" }
wagyu-model = { git = "https://github.com/mwcproject/wagyu-model", branch = "master" }

grin_wallet_util = { path = "../util", version = "4.1.0" }
grin_wallet_config = { path = "../config", version = "4.1.0" }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
libc = { version = "0.2.69", default-features = false }
